[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/mikodacs-font/Mikodacs-vp2L.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/menus_and_ui_sprites/pause menu bg.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 339 )
texture = ExtResource( 3 )

[node name="MenuMain" type="VBoxContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 364.0
margin_top = 248.0
margin_right = 660.0
margin_bottom = 352.0

[node name="UnpauseButton" type="Button" parent="MenuMain"]
margin_right = 296.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Unpause/Retomar"

[node name="OptionsButton" type="Button" parent="MenuMain"]
margin_top = 27.0
margin_right = 296.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Options/Opções"

[node name="ExtraButton" type="Button" parent="MenuMain"]
margin_top = 54.0
margin_right = 296.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "Extra"

[node name="SaveButton" type="Button" parent="MenuMain"]
margin_top = 81.0
margin_right = 296.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "Save/Salvar"

[node name="LoadButton" type="Button" parent="MenuMain"]
margin_top = 108.0
margin_right = 296.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 3 )
text = "Load/Carregar"

[node name="QuitButton" type="Button" parent="MenuMain"]
margin_top = 135.0
margin_right = 296.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 4 )
text = "Quit/Saída"

[node name="OptionsMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1024.0
margin_bottom = 600.0

[node name="SoundSettings" type="HBoxContainer" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -20.0
margin_right = -50.0
margin_bottom = 20.0

[node name="Labels" type="VBoxContainer" parent="OptionsMenu/SoundSettings"]
margin_right = 78.0
margin_bottom = 40.0

[node name="Music" type="Label" parent="OptionsMenu/SoundSettings/Labels"]
margin_right = 78.0
margin_bottom = 17.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Músic(a)"

[node name="Sound" type="Label" parent="OptionsMenu/SoundSettings/Labels"]
margin_top = 22.0
margin_right = 78.0
margin_bottom = 39.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 6 )
text = "Sound/Som"

[node name="Sliders" type="VBoxContainer" parent="OptionsMenu/SoundSettings"]
margin_left = 82.0
margin_right = 190.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Music" type="HSlider" parent="OptionsMenu/SoundSettings/Sliders"]
margin_right = 108.0
margin_bottom = 16.0

[node name="Sound" type="HSlider" parent="OptionsMenu/SoundSettings/Sliders"]
margin_top = 20.0
margin_right = 108.0
margin_bottom = 36.0

[node name="VideoSettings" type="HBoxContainer" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 51.0
margin_top = -20.0
margin_right = 235.0
margin_bottom = 32.0

[node name="Labels" type="VBoxContainer" parent="OptionsMenu/VideoSettings"]
margin_right = 156.0
margin_bottom = 52.0

[node name="Fullscreen" type="Label" parent="OptionsMenu/VideoSettings/Labels"]
margin_top = 17.0
margin_right = 156.0
margin_bottom = 34.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 7 )
text = "Fullscreen/Ecrã Inteiro"

[node name="Checks" type="VBoxContainer" parent="OptionsMenu/VideoSettings"]
margin_left = 160.0
margin_right = 184.0
margin_bottom = 52.0

[node name="Fullscreen" type="CheckBox" parent="OptionsMenu/VideoSettings/Checks"]
margin_right = 24.0
margin_bottom = 24.0

[node name="BackFromOptions" type="Button" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -167.0
margin_right = 43.0
margin_bottom = -144.0
custom_fonts/font = SubResource( 9 )
text = "Menu"

[connection signal="pressed" from="MenuMain/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="MenuMain/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuMain/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="OptionsMenu/SoundSettings/Sliders/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="OptionsMenu/SoundSettings/Sliders/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="toggled" from="OptionsMenu/VideoSettings/Checks/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="OptionsMenu/BackFromOptions" to="." method="_on_BackFromOptions_pressed"]
